--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="logo">
+            <a href="#banner" class="logo">
                 <img src="./src/img/logo.png" alt="logo">
             </a>
+
+            <button class="menu-toggle" aria-label="Abrir menú">
+                ☰
+            </button>
+
             <ul>
                 <li><a href="#banner">Inicio</a></li>
                 <li><a href="#offers">Ofertas</a></li>
@@ -33,7 +38,7 @@
 
     <main>
         <section class="banner" id="banner">
-            <h1>Fresas con crema ¡Una cucharada y no podras parar!</h1>
+            <h1>Fresas con crema<br>¡Una cucharada y no podras parar!</h1>
         </section>
         <section class="reserve">
             <h1>RESERVA YA</h1>
@@ -61,7 +66,7 @@
 
                 <h1>Ofertas diarias</h1>
                 <p><b>Descubrelas</b></p>
-                <p><i>Ups paredce que no hay nada por ahora</i></p>
+                <p><i>Ups parece que no hay nada por ahora</i></p>
                 <img src="./src/img/fresa_png-removebg-preview.png" alt="">
             </div>
         </section>
@@ -72,6 +77,7 @@
                     <div class="product">
                         <p><b>Originales</b></p>
                         <img id="og_img" src="./src/img/og_fresa.png" alt="original">
+                        <br>
                     </div>
                     <div class="product">
                         <p><b>Veganas</b></p>
@@ -111,7 +117,7 @@
                 <img src="./src/img/redes.png" alt="Fresas con crema">
             </div>
         </section>
-        <footer class="footer" >
+        <footer class="footer">
             <div class="footer-contenido">
                 <p>&copy; 2025 Dulce Tentación. Todos los derechos reservados.</p>
                 <div class="footer-links">
@@ -124,39 +130,57 @@
     </main>
 
     <script>
-        // Se ejecuta cuando se carga la página
         document.addEventListener("DOMContentLoaded", function () {
-            // Mostramos solo el contenido de "A Domicilio" al inicio
+            // Mostrar solo "A Domicilio" al inicio
             showtab("delivery");
-        });
 
-        function showtab(tabId) {
-            // Oculta ambos bloques de contenido
-            document.getElementById("delivery").style.display = "none";
-            document.getElementById("takein").style.display = "none";
+            function showtab(tabId) {
+                document.getElementById("delivery").style.display = "none";
+                document.getElementById("takein").style.display = "none";
 
-            // Elimina clase activa de ambas pestañas
-            document.querySelector(".delivery").classList.remove("active-tab");
-            document.querySelector(".takein").classList.remove("active-tab");
+                document.querySelector(".delivery").classList.remove("active-tab");
+                document.querySelector(".takein").classList.remove("active-tab");
 
-            // Muestra el contenido correspondiente
-            document.getElementById(tabId).style.display = "block";
+                document.getElementById(tabId).style.display = "block";
 
-            // Activa la pestaña seleccionada
-            if (tabId === "delivery") {
-                document.querySelector(".delivery").classList.add("active-tab");
-            } else {
-                document.querySelector(".takein").classList.add("active-tab");
+                if (tabId === "delivery") {
+                    document.querySelector(".delivery").classList.add("active-tab");
+                } else {
+                    document.querySelector(".takein").classList.add("active-tab");
+                }
             }
-        }
 
-        window.addEventListener('scroll', () => {
-            const header = document.querySelector('header');
-            if (window.scrollY > 50) {  // cuando scrollees más de 50px
-                header.classList.add('scrolled');
-            } else {
-                header.classList.remove('scrolled');
-            }
+            // Efecto scroll para header
+            window.addEventListener('scroll', () => {
+                const header = document.querySelector('header');
+                if (window.scrollY > 50) {
+                    header.classList.add('scrolled');
+                } else {
+                    header.classList.remove('scrolled');
+                }
+            });
+
+            // Menu toggle para móviles
+            const toggle = document.querySelector('.menu-toggle');
+            const navLinks = document.querySelector('nav ul');
+
+            toggle.addEventListener('click', () => {
+                navLinks.classList.toggle('show');
+            });
+
+            // Cerrar menú al hacer click en un enlace
+            document.querySelectorAll('nav ul li a').forEach(link => {
+                link.addEventListener('click', () => {
+                    navLinks.classList.remove('show');
+                });
+            });
+
+            // Cerrar menú al hacer scroll
+            window.addEventListener('scroll', () => {
+                if (navLinks.classList.contains('show')) {
+                    navLinks.classList.remove('show');
+                }
+            });
         });
     </script>
 
