--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
     <link rel="icon" href="/src/img/logo_w_bg.jpg" type="image/jpg">
+    <script src="script.js"></script>
 
 </head>
 
@@ -128,62 +129,6 @@
             </div>
         </footer>
     </main>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            // Mostrar solo "A Domicilio" al inicio
-            showtab("delivery");
-
-            function showtab(tabId) {
-                document.getElementById("delivery").style.display = "none";
-                document.getElementById("takein").style.display = "none";
-
-                document.querySelector(".delivery").classList.remove("active-tab");
-                document.querySelector(".takein").classList.remove("active-tab");
-
-                document.getElementById(tabId).style.display = "block";
-
-                if (tabId === "delivery") {
-                    document.querySelector(".delivery").classList.add("active-tab");
-                } else {
-                    document.querySelector(".takein").classList.add("active-tab");
-                }
-            }
-
-            // Efecto scroll para header
-            window.addEventListener('scroll', () => {
-                const header = document.querySelector('header');
-                if (window.scrollY > 50) {
-                    header.classList.add('scrolled');
-                } else {
-                    header.classList.remove('scrolled');
-                }
-            });
-
-            // Menu toggle para móviles
-            const toggle = document.querySelector('.menu-toggle');
-            const navLinks = document.querySelector('nav ul');
-
-            toggle.addEventListener('click', () => {
-                navLinks.classList.toggle('show');
-            });
-
-            // Cerrar menú al hacer click en un enlace
-            document.querySelectorAll('nav ul li a').forEach(link => {
-                link.addEventListener('click', () => {
-                    navLinks.classList.remove('show');
-                });
-            });
-
-            // Cerrar menú al hacer scroll
-            window.addEventListener('scroll', () => {
-                if (navLinks.classList.contains('show')) {
-                    navLinks.classList.remove('show');
-                }
-            });
-        });
-    </script>
-
 </body>
 
 </html>
